# blueseer

./: README.md  pip_requirements.txt
blueseer/: README.md
blueseer/blueseer/: CMakeLists.txt  prj.conf
blueseer/blueseer/src/: blueseer.cc  blueseer.h  blueseer_model.cc  blueseer_model.h  display.cc  display.h  main.cc  module_config.h  storage.cc  storage.h
dataset/test/1/: ST100.CSV  ST101.CSV  ST106.CSV  ST107.CSV  ST11.CSV  ST110.CSV  ST112.CSV  ST116.CSV  ST119.CSV  ST120.CSV  ST121.CSV  ST122.CSV  ST123.CSV  ST125.CSV  ST128.CSV  ST131.CSV  ST136.CSV  ST140.CSV  ST142.CSV  ST143.CSV  ST145.CSV  ST147.CSV  ST148.CSV  ST149.CSV  ST15.CSV  ST150.CSV  ST152.CSV  ST154.CSV  ST155.CSV  ST157.CSV  ST159.CSV  ST16.CSV  ST161.CSV  ST162.CSV  ST165.CSV  ST169.CSV  ST17.CSV  ST170.CSV  ST171.CSV  ST172.CSV  (+79 more)
dataset/test/10/: ST0.CSV  ST1.CSV  ST10.CSV  ST102.CSV  ST103.CSV  ST104.CSV  ST105.CSV  ST108.CSV  ST109.CSV  ST111.CSV  ST113.CSV  ST114.CSV  ST115.CSV  ST117.CSV  ST118.CSV  ST12.CSV  ST124.CSV  ST126.CSV  ST127.CSV  ST129.CSV  ST13.CSV  ST130.CSV  ST132.CSV  ST133.CSV  ST134.CSV  ST135.CSV  ST137.CSV  ST138.CSV  ST139.CSV  ST14.CSV  ST141.CSV  ST144.CSV  ST146.CSV  ST151.CSV  ST153.CSV  ST156.CSV  ST158.CSV  ST160.CSV  ST163.CSV  ST164.CSV  (+93 more)
dataset/test/11/: TR1409.CSV  TR1410.CSV  TR1411.CSV  TR1412.CSV  TR1413.CSV  TR1414.CSV  TR1415.CSV  TR1416.CSV  TR1417.CSV  TR1418.CSV  TR1419.CSV  TR1420.CSV  TR1421.CSV  TR1422.CSV  TR1423.CSV  TR1424.CSV  TR1425.CSV  TR1426.CSV  TR1427.CSV  TR1428.CSV  TR1429.CSV  TR1430.CSV  TR1431.CSV  TR1432.CSV  TR1433.CSV  TR1434.CSV  TR1435.CSV  TR1436.CSV  TR1437.CSV  TR1438.CSV  TR1439.CSV  TR1440.CSV  TR1441.CSV  TR1442.CSV  TR1443.CSV  TR1444.CSV  TR1445.CSV  TR1446.CSV  TR1447.CSV  TR1448.CSV  (+262 more)
dataset/test/2/: TR0.CSV  TR1.CSV  TR10.CSV  TR100.CSV  TR101.CSV  TR102.CSV  TR103.CSV  TR104.CSV  TR105.CSV  TR106.CSV  TR107.CSV  TR108.CSV  TR109.CSV  TR11.CSV  TR110.CSV  TR111.CSV  TR112.CSV  TR113.CSV  TR114.CSV  TR115.CSV  TR116.CSV  TR117.CSV  TR118.CSV  TR119.CSV  TR12.CSV  TR120.CSV  TR121.CSV  TR122.CSV  TR123.CSV  TR124.CSV  TR125.CSV  TR126.CSV  TR127.CSV  TR128.CSV  TR129.CSV  TR13.CSV  TR130.CSV  TR131.CSV  TR132.CSV  TR133.CSV  (+228 more)
dataset/test/3/: NA1000.CSV  NA1001.CSV  NA1002.CSV  NA1003.CSV  NA1004.CSV  NA1005.CSV  NA1006.CSV  NA1007.CSV  NA1008.CSV  NA1009.CSV  NA1010.CSV  NA1011.CSV  NA1012.CSV  NA1013.CSV  NA1014.CSV  NA1015.CSV  NA1016.CSV  NA1017.CSV  NA1018.CSV  NA1019.CSV  NA1020.CSV  NA1021.CSV  NA1022.CSV  NA1023.CSV  NA1024.CSV  NA1025.CSV  NA1026.CSV  NA1027.CSV  NA1028.CSV  NA1029.CSV  NA1030.CSV  NA1031.CSV  NA1032.CSV  NA1033.CSV  NA1034.CSV  NA1035.CSV  NA1036.CSV  NA1037.CSV  NA1038.CSV  NA1039.CSV  (+827 more)
dataset/test/4/: HO0.CSV  HO1.CSV  HO10.CSV  HO100.CSV  HO1000.CSV  HO1001.CSV  HO1002.CSV  HO1003.CSV  HO1004.CSV  HO1005.CSV  HO1006.CSV  HO1007.CSV  HO1008.CSV  HO1009.CSV  HO101.CSV  HO1010.CSV  HO1011.CSV  HO1012.CSV  HO1013.CSV  HO1014.CSV  HO1015.CSV  HO1016.CSV  HO1017.CSV  HO1018.CSV  HO1019.CSV  HO102.CSV  HO1020.CSV  HO1021.CSV  HO1022.CSV  HO1023.CSV  HO1024.CSV  HO1025.CSV  HO1026.CSV  HO1027.CSV  HO1028.CSV  HO1029.CSV  HO103.CSV  HO1030.CSV  HO1031.CSV  HO1032.CSV  (+1760 more)
dataset/test/5/: HO0.CSV  HO1.CSV  HO10.CSV  HO100.CSV  HO101.CSV  HO102.CSV  HO103.CSV  HO104.CSV  HO105.CSV  HO106.CSV  HO107.CSV  HO108.CSV  HO109.CSV  HO11.CSV  HO110.CSV  HO111.CSV  HO112.CSV  HO113.CSV  HO114.CSV  HO115.CSV  HO116.CSV  HO117.CSV  HO118.CSV  HO119.CSV  HO12.CSV  HO120.CSV  HO121.CSV  HO122.CSV  HO123.CSV  HO124.CSV  HO125.CSV  HO126.CSV  HO127.CSV  HO128.CSV  HO129.CSV  HO13.CSV  HO130.CSV  HO131.CSV  HO132.CSV  HO133.CSV  (+628 more)
dataset/test/6/: OF0.CSV  OF1.CSV  OF10.CSV  OF100.CSV  OF1000.CSV  OF1001.CSV  OF1002.CSV  OF1003.CSV  OF1004.CSV  OF1005.CSV  OF1006.CSV  OF1007.CSV  OF1008.CSV  OF1009.CSV  OF101.CSV  OF1010.CSV  OF1011.CSV  OF1012.CSV  OF1013.CSV  OF1014.CSV  OF1015.CSV  OF1016.CSV  OF1017.CSV  OF1018.CSV  OF1019.CSV  OF102.CSV  OF1020.CSV  OF1021.CSV  OF1022.CSV  OF1023.CSV  OF1024.CSV  OF1025.CSV  OF1026.CSV  OF1027.CSV  OF1028.CSV  OF1029.CSV  OF103.CSV  OF1030.CSV  OF1031.CSV  OF1032.CSV  (+1760 more)
dataset/test/7/: RE0.CSV  (+1397 more)
docs/: quantized_model_breakdown.html
python/: deprecated.ipynb  train_and_quantize.ipynb
python/models/: blueseer_model.cc  blueseer_model.cc_tflite  blueseer_model.cc_tflm  blueseer_model.tflite
(+61971 files in other folders)
